syntax = "proto3";

package v1;

import "item.proto";
import "google/protobuf/timestamp.proto";
//import "google/protobuf/wrappers.proto";

message Order {
  string id = 1;
  string name = 2;
  string phone = 3;
  string address = 4;
  string payment = 5;
  google.protobuf.Timestamp date = 6;

  repeated Item items = 7;
}

message AddOrderRequest {
  string name = 1;
  string phone = 2;
  string address = 3;
  string payment = 4;

  repeated uint32 item_id = 5;
}

message OrderResponse {
  Order order = 1;
}

service OrderService {
  rpc AddOrder(AddOrderRequest) returns (OrderResponse);
}
